--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0",
+    "throttled-queue": "^1.0.7",
     "xss-clean": "^0.1.1"
   },
   "scripts": {
