--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "helmet": "^3.21.2",
     "https": "^1.0.0",
     "memory-cache": "^0.2.0",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
