only show images in viewport

--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "graphql": "^14.6.0",
     "helmet": "^3.21.2",
     "https": "^1.0.0",
+    "intersection-observer": "^0.7.0",
     "memory-cache": "^0.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-in-viewport": "^1.0.0-alpha.11",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
