--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-dropdown": "^1.6.4",
     "react-in-viewport": "^1.0.0-alpha.11",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
