--- a/package.json
+++ b/package.json
@@ -33,9 +33,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "node ./server/pokemon-server",
-    "dev":  "npx npm-run-all -p server start"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -54,6 +52,5 @@
   },
   "devDependencies": {
     "node-sass": "^4.13.1"
-  },
-  "proxy": "http://localhost:8083"
+  }
 }
